Bug 398729 - key sequence ctrl+w ambiguous with photoshop compatible bindings set
Summary: key sequence ctrl+w ambiguous with photoshop compatible bindings set
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 4.1.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-16 18:04 UTC by wkg28406
Modified: 2018-09-24 07:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wkg28406 2018-09-16 18:04:14 UTC
Krita 4.1.1-4 (Arch Linux)

Tested with fresh configuration (removing existing ~/.local/share/krita, ~/.config/krita*)

Reproducible: Always

Steps:
1. Open Krita
2. Create new document
3. Settings > Configure Krita
4. Keyboard Shortcuts > Shortcut Schemes > Photoshop Compatible
5. Canvas Input Settings > Input Profile > Photoshop Compatible
6. Close out of settings with "OK"
7. With new document focused, press ctrl+w

Results:
Document window not closed, ambiguous shortcut popup.

There is no other shortcut with ctrl+w that I can find aside from ctrl+shift+w but changing that does not change result. In fact, ctrl+shift+w does work, closing all windows.

Ctrl+w does work normally, on a fresh configuration, with default settings.

Expected:
Document window to be closed
Comment 1 Dmitry Kazakov 2018-09-17 19:45:53 UTC
Git commit f2f2be209d8d40a5e7df97f6d259e14818355a4c by Dmitry Kazakov.
Committed on 17/09/2018 at 19:45.
Pushed by dkazakov into branch 'master'.

Fix a Ctrl+W shortcut conflict

Another action is created by Qt in
QMdiSubWindowPrivate::createSystemMenu(). Since we cannot
remove it, we should just let it work.

M  +24   -4    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/f2f2be209d8d40a5e7df97f6d259e14818355a4c
Comment 2 Halla Rempt 2018-09-18 11:32:41 UTC
Git commit 36861ec3b2608893a5c624560e5d3302bda19c31 by Boudewijn Rempt.
Committed on 18/09/2018 at 11:30.
Pushed by rempt into branch 'master'.

Remove the shortcuts from the mdi window's system menu's actions

Just changing the scope isn't enough: people also want to be
able to configure the the close window action. Fortunately,
that turns out to be quite possible.
Related: bug 375524, bug 352205

M  +8    -8    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/36861ec3b2608893a5c624560e5d3302bda19c31
Comment 3 Halla Rempt 2018-09-24 07:25:19 UTC
Git commit 7de91a765bb10fe4c55ef851bd157177618a8171 by Boudewijn Rempt.
Committed on 24/09/2018 at 06:57.
Pushed by rempt into branch 'krita/4.1'.

Remove the shortcuts from the mdi window's system menu's actions

Just changing the scope isn't enough: people also want to be
able to configure the the close window action. Fortunately,
that turns out to be quite possible.
Related: bug 375524, bug 352205

M  +8    -8    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/7de91a765bb10fe4c55ef851bd157177618a8171
Comment 4 Halla Rempt 2018-09-24 07:25:21 UTC
Git commit 7ab3b432124fbc28c014b0e2e123bf62ce95e990 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 24/09/2018 at 06:57.
Pushed by rempt into branch 'krita/4.1'.

Fix a Ctrl+W shortcut conflict

Another action is created by Qt in
QMdiSubWindowPrivate::createSystemMenu(). Since we cannot
remove it, we should just let it work.

M  +24   -4    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/7ab3b432124fbc28c014b0e2e123bf62ce95e990