Fix a Ctrl+W shortcut conflict

Another action is created by Qt in
QMdiSubWindowPrivate::createSystemMenu(). Since we cannot
remove it, we should just let it work.


BUG:398729